test export options in ami.html and add export functions in ami.js

--- a/ami/ami.html
+++ b/ami/ami.html
@@ -530,9 +530,9 @@
                                        </a>
 
                                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                          <a class="dropdown-item" href="#">copy</a>
-                                          <a class="dropdown-item" href="#">csv</a>
-                                          <a class="dropdown-item" href="#">print</a>
+                                          <a class="dropdown-item" href="#" onclick="exportToCopy()">Copy</a>
+                                          <a class="dropdown-item" href="#" onclick="exportToCSV()">CSV</a>
+                                          <a class="dropdown-item" href="#" onclick="exportToPrint()">Print</a>
                                        </div>
                                     </div>
                                  </div>
