Add print functionality to AMI page

--- a/ami/ami.html
+++ b/ami/ami.html
@@ -535,12 +535,9 @@
                                        </a>
                                  
                                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                          <button class="dropdown-item export-button" data-export-type="copy">Copy</button>
                                           <button class="dropdown-item export-button" id="exportcsv" data-export-type="csv">CSV</button>
-                                          <button class="dropdown-item export-button" data-export-type="print">Print</button>
+                                          <button class="dropdown-item export-button" id="print">Cetak</button>
                                           <button class="dropdown-item export-button" id="exportButton">Excel</button>
-
-
                                        </div>
                                     </div>
                                  </div>
