Update export button ID in ami.html

--- a/ami/ami.html
+++ b/ami/ami.html
@@ -537,8 +537,10 @@
                                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                                           <button class="dropdown-item export-button" id="exportcsv" data-export-type="csv">CSV</button>
                                           <button class="dropdown-item export-button" id="print">Cetak</button>
-                                          <button class="dropdown-item export-button" id="exportButton">Excel</button>
+                                          <button class="dropdown-item export-button" id="exportexcel">Excel</button>
                                        </div>
+
+                                       
                                     </div>
                                  </div>
                                  
