--- a/ami/ami.html
+++ b/ami/ami.html
@@ -535,7 +535,7 @@
                                        </a>
                                  
                                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                          <button class="dropdown-item export-button" id="exportcsv" data-export-type="csv">CSV</button>
+                                          <button class="dropdown-item export-button" id="exportcsv" >CSV</button>
                                           <button class="dropdown-item export-button" id="print">Cetak</button>
                                           <button class="dropdown-item export-button" id="exportexcel">Excel</button>
                                        </div>
