--- a/ami/standar.html
+++ b/ami/standar.html
@@ -478,24 +478,30 @@
                   </div>
                   <div class="card mt-30">
                      <div class="card-body">
-
-                        <div class="userDatatable adv-table-table global-shadow border-light-0 w-100 adv-table">
-                           <div class="table-responsive">
-                              <div class="adv-table-table__header">
-                                 <h4>Data Standar</h4><div><br></div>
-                                 <!-- <div class="adv-table-table__button">
+                        <div class="col-lg-6 mb-3">
+                           <div class="row">
+                              <div class="col-md-6 mb-3">
+                                 <div class="adv-table-table__button">
                                     <div class="dropdown">
                                        <a class="btn btn-primary dropdown-toggle dm-select" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                           Export
                                        </a>
-
                                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                          <a class="dropdown-item" href="#">copy</a>
-                                          <a class="dropdown-item" href="#">csv</a>
-                                          <a class="dropdown-item" href="#">print</a>
+                                          <button class="dropdown-item export-button" id="exportcsv">CSV</button>
+                                          <button class="dropdown-item export-button" id="print">Cetak</button>
+                                          <button class="dropdown-item export-button" id="exportexcel">Excel</button>
                                        </div>
                                     </div>
-                                 </div> -->
+                                 </div>
+                              </div>
+                              
+                           </div>
+                        </div>
+                        <div class="userDatatable adv-table-table global-shadow border-light-0 w-100 adv-table">
+                           <div class="table-responsive">
+                              <div class="adv-table-table__header">
+                                 <h4>Data Standar</h4><div><br></div>
+                                 
                               </div>
                               <div id="filter-form-container"></div>
                               <table class="table mb-0 table-borderless " data-sorting="true" data-filter-container="#filter-form-container" data-paging-current="1" data-paging-position="right" data-paging-size="10">
