feat(standar):Add external libraries for parsing Excel and CSV files

--- a/ami/standar.html
+++ b/ami/standar.html
@@ -54,7 +54,8 @@
    <!-- Library GET Sidebar -->
    <script src="../js/cihuy.js" type="module"></script> 
    <script src="standar.js" type="module"></script>  
-
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.5/xlsx.full.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
    <!-- Fonts -->
    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
