Update labels for Indikator in standar.html

--- a/ami/standar.html
+++ b/ami/standar.html
@@ -369,7 +369,7 @@
                                                 id="judulStandar">
                                           </div>
                                           <div class="form-group mb-20">
-                                             <label for="indikator">Indikator :</label>
+                                             <label for="indikator">Isi Indikator :</label>
                                              <select class="form-control" id="indikator"></select>
                                          </div>
                                          
@@ -449,7 +449,7 @@
                                              id="judulStandar-update">
                                        </div>
                                        <div class="form-group mb-20">
-                                          <label>Indikator :</label>
+                                          <label>Isi Indikator :</label>
                                           <select class="form-control" id="indikator-update"></select>
                                        </div>
 
@@ -552,7 +552,7 @@
                                        <span class="userDatatable-title">Standar</span>
                                     </th>
                                     <th>
-                                       <span class="userDatatable-title">Indikator</span>
+                                       <span class="userDatatable-title">Isi Indikator</span>
                                     </th>
                                     <th>
                                        <span class="userDatatable-title">Isi</span>
