feat(standar):Update select option value in standar.html

--- a/ami/standar.html
+++ b/ami/standar.html
@@ -404,7 +404,7 @@
 
                                                    <select class="js-example-basic-single js-states form-control"
                                                       id="prodiatauunit">
-                                                      <option disabled value="JAN">--Pilih Prodi Unit--</option>
+                                                      <option disabled value="JAN"></option>
                                                    </select>
                                                 </div>
                                              </div>
