--- a/ami/siklus.html
+++ b/ami/siklus.html
@@ -574,7 +574,9 @@
                         <thead>
                           <tr class="userDatatable-header">
                             <th>
-                              <span class="userDatatable-title">Id Siklus</span>
+                              <span class="userDatatable-title"
+                                >id Periode</span
+                              >
                             </th>
                             <th>
                               <span class="userDatatable-title">Tahun</span>
