Fix modal class name in users-convert.html

--- a/users/users-convert.html
+++ b/users/users-convert.html
@@ -382,7 +382,7 @@
                               </div>
                            </div>
                         </div>
-                        <div class="modal fade new-member " id="new-member-update" role="dialog" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                        <div class="modal fade new-member" id="new-member-update" role="dialog" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                            <div class="modal-dialog modal-dialog-centered">
                               <div class="modal-content  radius-xl">
                                  <div class="modal-header">
@@ -411,7 +411,7 @@
                                            
                                           
 
-                                             <button
+                                             <button type="button"
                                              id="updateDataButton"
                                              class="btn btn-primary btn-default btn-squared text-capitalize">
                                              Simpan Data
