--- a/ami/ami.html
+++ b/ami/ami.html
@@ -709,6 +709,39 @@
               </div>
               <div class="card mt-30">
                 <div class="card-body">
+                  <div class="dropdown">
+                    <a
+                      class="btn btn-primary dropdown-toggle dm-select"
+                      href="#"
+                      role="button"
+                      id="dropdownMenuLink"
+                      data-bs-toggle="dropdown"
+                      aria-haspopup="true"
+                      aria-expanded="false"
+                    >
+                      Export
+                    </a>
+                    <div
+                      class="dropdown-menu"
+                      aria-labelledby="dropdownMenuLink"
+                    >
+                      <button
+                        class="dropdown-item export-button"
+                        id="exportcsv"
+                      >
+                        CSV
+                      </button>
+                      <button class="dropdown-item export-button" id="print">
+                        Cetak
+                      </button>
+                      <button
+                        class="dropdown-item export-button"
+                        id="exportexcel"
+                      >
+                        Excel
+                      </button>
+                    </div>
+                  </div>
                   <div
                     class="userDatatable table global-shadow border-light-0 w-100"
                   >
