feat : Add export dropdown menu and adjust table layout

--- a/users/users-fakultas.html
+++ b/users/users-fakultas.html
@@ -665,10 +665,45 @@
 
               <div class="card mt-30">
                 <div class="card-body">
+                  <div class="dropdown">
+                    <a
+                      class="btn btn-primary dropdown-toggle dm-select"
+                      href="#"
+                      role="button"
+                      id="dropdownMenuLink"
+                      data-bs-toggle="dropdown"
+                      aria-haspopup="true"
+                      aria-expanded="false"
+                    >
+                      Export
+                    </a>
+                    <div
+                      class="dropdown-menu"
+                      aria-labelledby="dropdownMenuLink"
+                    >
+                      <button
+                        class="dropdown-item export-button"
+                        id="exportcsv"
+                      >
+                        CSV
+                      </button>
+                      <button class="dropdown-item export-button" id="print">
+                        Cetak
+                      </button>
+                      <button
+                        class="dropdown-item export-button"
+                        id="exportexcel"
+                      >
+                        Excel
+                      </button>
+                    </div>
+                  </div>
+                  <br />
                   <div
                     class="userDatatable adv-table-table global-shadow border-light-0 w-100 adv-table"
                   >
                     <div class="table-responsive">
+                      <br />
                       <div class="adv-table-table__header">
                         <h4>Data Fakultas</h4>
                         <div class="adv-table-table__button"></div>
