feat(error): hapus error image png

--- a/prodi/selfassignment.html
+++ b/prodi/selfassignment.html
@@ -555,12 +555,12 @@
                                   class="d-flex flex-wrap mb-20 user-group-people__parent"
                                 >
                                   <li>
-                                    <a href="#"
+                                    <!-- <a href="#"
                                       ><img
                                         class="rounded-circle wh-34"
                                         src="../imgtm1.png"
                                         alt="author"
-                                    /></a>
+                                    /></a> -->
                                   </li>
                                   <li>
                                     <a href="#"
@@ -764,7 +764,7 @@
     <script src="../assets/vendor_assets/js/autoComplete.js"></script>
     <script src="../assets/vendor_assets/js/Chart.min.js"></script>
     <script src="../assets/vendor_assets/js/daterangepicker.js"></script>
-    <script src="../assets/vendor_assets/js/drawer.js"></script>
+    <!-- <script src="../assets/vendor_assets/js/drawer.js"></script> -->
     <script src="../assets/vendor_assets/js/dynamicBadge.js"></script>
     <script src="../assets/vendor_assets/js/dynamicCheckbox.js"></script>
     <script src="../assets/vendor_assets/js/footable.min.js"></script>
