feat(error) : perbaiki error di rouded circle image 2png

--- a/prodi/selfassignment.html
+++ b/prodi/selfassignment.html
@@ -563,12 +563,12 @@
                                     /></a> -->
                                   </li>
                                   <li>
-                                    <a href="#"
+                                    <!-- <a href="#"
                                       ><img
                                         class="rounded-circle wh-34"
                                         src="../imgtm2.png"
                                         alt="author"
-                                    /></a>
+                                    /></a> -->
                                   </li>
                                   <li>
                                     <a href="#"
