feat(error): perbaiki error image 3 png

--- a/prodi/selfassignment.html
+++ b/prodi/selfassignment.html
@@ -571,12 +571,12 @@
                                     /></a> -->
                                   </li>
                                   <li>
-                                    <a href="#"
+                                    <!-- <a href="#"
                                       ><img
                                         class="rounded-circle wh-34"
                                         src="../imgtm3.png"
                                         alt="author"
-                                    /></a>
+                                    /></a> -->
                                   </li>
                                   <li>
                                     <a href="#"
