feat(img): perbaiki image error di image 4 dan image 5 png

--- a/prodi/selfassignment.html
+++ b/prodi/selfassignment.html
@@ -579,20 +579,20 @@
                                     /></a> -->
                                   </li>
                                   <li>
-                                    <a href="#"
+                                    <!-- <a href="#"
                                       ><img
                                         class="rounded-circle wh-34"
                                         src="../imgtm4.png"
                                         alt="author"
-                                    /></a>
+                                    /></a> -->
                                   </li>
                                   <li>
-                                    <a href="#"
+                                    <!-- <a href="#"
                                       ><img
                                         class="rounded-circle wh-34"
                                         src="../imgtm5.png"
                                         alt="author"
-                                    /></a>
+                                    /></a> -->
                                   </li>
                                 </ul>
                               </div>
