--- a/auditors/pengawasan-audit.html
+++ b/auditors/pengawasan-audit.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>SimPelBi</title>
 
+    
     <link
       href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&display=swap"
       rel="stylesheet"
@@ -577,6 +578,8 @@
     <div class="overlay-dark-sidebar"></div>
     <div class="customizer-overlay"></div>
     <!-- inject:js-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.5/xlsx.full.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
     <script src="../assets/vendor_assets/js/jquery/jquery-3.5.1.min.js"></script>
     <script src="../assets/vendor_assets/js/jquery/jquery-ui.js"></script>
     <script src="../assets/vendor_assets/js/bootstrap/popper.js"></script>
