--- a/prodi/pengawasan-audit.html
+++ b/prodi/pengawasan-audit.html
@@ -91,6 +91,8 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.5/xlsx.full.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.0"></script>
+
     <!-- endinject -->
 
     <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon.png" />
