--- a/prodi/pengawasan-audit-detail.html
+++ b/prodi/pengawasan-audit-detail.html
@@ -519,7 +519,7 @@
                             </div>
                           </div>
 
-                          <div class="form-group row mb-25 form-group-to-hide">
+                          <!-- <div class="form-group row mb-25 form-group-to-hide">
                             <div class="col-sm-3 d-flex aling-items-center">
                               <label
                                 for="inputNameIcon"
@@ -623,7 +623,7 @@
                                 </select>
                               </div>
                             </div>
-                          </div>
+                          </div> -->
                           <button
                             type="button"
                             id="buttoninsert"
