--- a/prodi/pengawasan-audit-detail.html
+++ b/prodi/pengawasan-audit-detail.html
@@ -519,27 +519,28 @@
                             </div>
                           </div>
 
-                          <!-- <div class="form-group row mb-25 form-group-to-hide">
-                            <div class="col-sm-3 d-flex aling-items-center">
+                          <div class="form-group row mb-25 form-group-to-hide">
+                            <div class="col-sm-3 d-flex align-items-center">
                               <label
                                 for="inputNameIcon"
                                 class="col-form-label color-dark fs-14 fw-500 align-center mb-10"
-                                >Temuan KTS</label
                               >
+                                Input Link Drive
+                              </label>
                             </div>
                             <div class="col-sm-9">
                               <div class="with-icon">
-                                <select
+                                <input
+                                  type="text"
                                   class="form-control ih-medium ip-gray radius-xs b-light"
                                   id="id_kts"
-                                >
-                                  <option value="Pilihan1">Pilihan 1</option>
-                                </select>
+                                  placeholder="Enter link here"
+                                />
                               </div>
                             </div>
                           </div>
 
-                          <div class="form-group row mb-25 form-group-to-hide">
+                          <!--<div class="form-group row mb-25 form-group-to-hide">
                             <div class="col-sm-3 d-flex aling-items-center">
                               <label
                                 for="inputNameIcon"
