feat : mengganti pengauditan menjadi assesmen mandiri

--- a/prodi/pengawasan-audit-detail.html
+++ b/prodi/pengawasan-audit-detail.html
@@ -453,7 +453,7 @@
                 <div class="card card-default card-md mb-4">
                   <div class="card card-horizontal card-default card-md mb-4">
                     <div class="card-header">
-                      <h6>Pengauditan</h6>
+                      <h6>Assessmen Mandiri</h6>
                     </div>
                     <div class="card-body py-md-30">
                       <div class="horizontal-form">
