feat: mengganti tindak perbaikan menjadi rekomendasi perbaikan

--- a/auditors/pengawasan-audit-detail.html
+++ b/auditors/pengawasan-audit-detail.html
@@ -555,7 +555,7 @@
                               <label
                                 for="inputNameIcon"
                                 class="col-form-label color-dark fs-14 fw-500 align-center mb-10"
-                                >Tindak Perbaikan (Boleh diisi nanti):
+                                >Rekomendasi Perbaikan (Boleh diisi nanti):
                               </label>
                             </div>
                             <div class="col-sm-9">
