feat : ganti status open and closed

--- a/auditors/pengawasan-audit-detail.html
+++ b/auditors/pengawasan-audit-detail.html
@@ -603,10 +603,10 @@
                                   id="status"
                                 >
                                   <option value="Sudah Dilaksanakan">
-                                    Sudah Dilaksanakan
+                                    Closed
                                   </option>
                                   <option value="Belum Dilaksanakan">
-                                    Belum Dilaksanakan
+                                    Open
                                   </option>
                                   <option value="Ada Perbaikan">
                                     Ada Perbaikan
