feat : ganti rekomendasi perbaikan diauditor

--- a/auditors/pengawasan-audit.html
+++ b/auditors/pengawasan-audit.html
@@ -509,7 +509,7 @@
                             </th>
                             <th>
                               <span class="userDatatable-title"
-                                >Tindak Perbaikan</span
+                                >Rekomendasi Perbaikan</span
                               >
                             </th>
                             <th>
@@ -517,6 +517,7 @@
                                 >Target Waktu Perbaikan</span
                               >
                             </th>
+                           
                             <th>
                               <span class="userDatatable-title">Status</span>
                             </th>
