feat : tambahkan unpkg untuk swal alert

--- a/auditors/pengawasan-audit-detail.html
+++ b/auditors/pengawasan-audit-detail.html
@@ -730,6 +730,7 @@
     <script src="../assets/theme_assets/js/main.js"></script>
     <script src="./proses_audit_detail.js" type="module"></script>
     <!-- <script src="./mekanisme_add.js" type="module"></script> -->
+    <script src="https://unpkg.com/sweetalert2@11"></script>
 
     <!-- endinject-->
   </body>
