feat : perbaiki nilai value status

--- a/auditors/pengawasan-audit-detail.html
+++ b/auditors/pengawasan-audit-detail.html
@@ -602,12 +602,8 @@
                                   class="form-control ih-medium ip-gray radius-xs b-light"
                                   id="status"
                                 >
-                                  <option value="Sudah Dilaksanakan">
-                                    Closed
-                                  </option>
-                                  <option value="Belum Dilaksanakan">
-                                    Open
-                                  </option>
+                                  <option value="Closed">Closed</option>
+                                  <option value="Open">Open</option>
                                   <option value="Ada Perbaikan">
                                     Ada Perbaikan
                                   </option>
