--- a/ami/standar.html
+++ b/ami/standar.html
@@ -364,17 +364,17 @@
                                     <div class="new-member-modal">
                                        <form method="POST">
                                           <div class="form-group mb-20">
-                                             <Label>Judul Standar :</Label>
+                                             <Label>Nama Standar :</Label>
                                              <input type="text" class="form-control" placeholder="Nama Standar"
                                                 id="judulStandar">
                                           </div>
-                                          <div class="form-group mb-20">
+                                          <!-- <div class="form-group mb-20">
                                              <label for="indikator">Isi Indikator :</label>
                                              <select class="form-control" id="indikator"></select>
-                                         </div>
+                                         </div> -->
                                          
                                           <div class="form-group mb-20">
-                                             <label>Isi Standar:</label>
+                                             <label>Pernyataan Standar:</label>
                                              <div class="note-toolbar ">
                                                 <button class="note-toolbar-button"
                                                    id="bold-button"><strong>B</strong></button>
