feat: Add cookie.js for handling login token and redirect logic

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="js/main.js"></script>
     <script src="./js/cihuy.js" type="module"></script>
     <script src="./js/admin.js" type="module"></script>
+    <script src="./js/cookie.js" type="module"></script>
 
 
 </head>
