--- a/ami/siklus.html
+++ b/ami/siklus.html
@@ -185,9 +185,9 @@
                           >
                         </li>
                       </ul>
-                      <a href="" class="nav-author__signout">
-                        <i class="uil uil-sign-out-alt"></i> Sign Out</a
-                      >
+                      <a href="javascript:;" class="nav-author__signout" onclick="logout()">
+                        <i class="uil uil-sign-out-alt"></i> Sign Out
+                      </a>
                     </div>
                   </div>
                   <!-- ends: .dropdown-wrapper -->
@@ -704,5 +704,15 @@
     <script src="../assets/theme_assets/js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- endinject-->
+
+    <script>
+      function logout() {
+        function deleteCookie(name) {
+          document.cookie = name + '=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;';
+        }
+        deleteCookie('login'); 
+        window.location.href = 'https://login.ulbi.ac.id/';
+      }
+    </script> 
   </body>
 </html>
