--- a/pengawasan/foto_kegiatan.html
+++ b/pengawasan/foto_kegiatan.html
@@ -164,8 +164,9 @@
                                        <i class="uil uil-bell"></i> Help</a>
                                  </li>
                               </ul>
-                              <a href="" class="nav-author__signout">
-                                 <i class="uil uil-sign-out-alt"></i> Sign Out</a>
+                              <a href="javascript:;" class="nav-author__signout" onclick="logout()">
+                                 <i class="uil uil-sign-out-alt"></i> Sign Out
+                               </a>  
                            </div>
                         </div>
                         <!-- ends: .dropdown-wrapper -->
@@ -543,6 +544,16 @@
    <script src="../assets/theme_assets/js/main.js"></script>
    <script src="./foto_kegiatan.js" type="module"></script>
    <!-- endinject-->
+
+   <script>
+      function logout() {
+        function deleteCookie(name) {
+          document.cookie = name + '=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;';
+        }
+        deleteCookie('login'); 
+        window.location.href = 'https://login.ulbi.ac.id/';
+      }
+    </script> 
 </body>
 
 </html>
