--- a/settings/data_jenjang.html
+++ b/settings/data_jenjang.html
@@ -140,9 +140,9 @@
                             >
                           </li>
                         </ul>
-                        <a href="" class="nav-author__signout">
-                          <i class="uil uil-sign-out-alt"></i> Sign Out</a
-                        >
+                        <a href="javascript:;" class="nav-author__signout" onclick="logout()">
+                           <i class="uil uil-sign-out-alt"></i> Sign Out
+                         </a>
                       </div>
                     </div>
                     <!-- ends: .dropdown-wrapper -->
@@ -532,6 +532,16 @@
    <script src="../assets/theme_assets/js/leaflet-init.js"></script>
    <script src="../assets/theme_assets/js/main.js"></script>
    <!-- endinject-->
+
+   <script>
+      function logout() {
+        function deleteCookie(name) {
+          document.cookie = name + '=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;';
+        }
+        deleteCookie('login'); 
+        window.location.href = 'https://login.ulbi.ac.id/';
+      }
+    </script>
 </body>
 
 </html>
