--- a/users/users-admin.html
+++ b/users/users-admin.html
@@ -132,8 +132,9 @@
                                  <i class="uil uil-bell"></i> Help</a>
                            </li>
                         </ul>
-                        <a href="" class="nav-author__signout">
-                           <i class="uil uil-sign-out-alt"></i> Sign Out</a>
+                        <a href="javascript:;" class="nav-author__signout" onclick="logout()">
+                          <i class="uil uil-sign-out-alt"></i> Sign Out
+                        </a>  
                      </div>
                   </div>
                   <!-- ends: .dropdown-wrapper -->
@@ -646,6 +647,15 @@
   <script src="../assets/theme_assets/js/main.js"></script>
   <!-- endinject-->
   <script src="users-admin.js" type="module"></script>
+  <script>
+    function logout() {
+      function deleteCookie(name) {
+        document.cookie = name + '=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;';
+      }
+      deleteCookie('login'); 
+      window.location.href = 'https://login.ulbi.ac.id/';
+    }
+  </script>
 </body>
 
 </html>
