--- a/users/users-auditor.html
+++ b/users/users-auditor.html
@@ -183,9 +183,9 @@
                           >
                         </li>
                       </ul>
-                      <a href="" class="nav-author__signout">
-                        <i class="uil uil-sign-out-alt"></i> Sign Out</a
-                      >
+                      <a href="javascript:;" class="nav-author__signout" onclick="logout()">
+                        <i class="uil uil-sign-out-alt"></i> Sign Out
+                      </a>
                     </div>
                   </div>
                   <!-- ends: .dropdown-wrapper -->
@@ -939,5 +939,14 @@
     <script src="./users-auditor.js" type="module"></script>
 
     <!-- endinject-->
+    <script>
+      function logout() {
+        function deleteCookie(name) {
+          document.cookie = name + '=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;';
+        }
+        deleteCookie('login'); 
+        window.location.href = 'https://login.ulbi.ac.id/';
+      }
+    </script>
   </body>
 </html>
