--- a/users/users-fakultas.html
+++ b/users/users-fakultas.html
@@ -181,9 +181,9 @@
                           >
                         </li>
                       </ul>
-                      <a href="" class="nav-author__signout">
-                        <i class="uil uil-sign-out-alt"></i> Sign Out</a
-                      >
+                      <a href="javascript:;" class="nav-author__signout" onclick="logout()">
+                        <i class="uil uil-sign-out-alt"></i> Sign Out
+                      </a>
                     </div>
                   </div>
                   <!-- ends: .dropdown-wrapper -->
@@ -859,5 +859,15 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script> -->
 
     <!-- endinject-->
+
+    <script>
+      function logout() {
+        function deleteCookie(name) {
+          document.cookie = name + '=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;';
+        }
+        deleteCookie('login'); 
+        window.location.href = 'https://login.ulbi.ac.id/';
+      }
+    </script> 
   </body>
 </html>
